# ashoka-eats

./: .gitignore  pyproject.toml
.claude/: CLAUDE.md
config/: settings.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: meta.json  recommendations.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CityGrid.tsx  FilterBar.tsx  Leaderboard.tsx  Nav.tsx  RecommendationCard.tsx  SearchBox.tsx
frontend/src/data/: loader.ts
frontend/src/pages/: About.tsx  CategoryPage.tsx  CityPage.tsx  Home.tsx  LeaderboardPage.tsx  RecommenderPage.tsx
src/pipeline/: chunker.py  deduplicator.py  enricher.py  extractor.py  parser.py  run.py  sanitizer.py  writer.py
tests/pipeline/: test_chunker.py  test_deduplicator.py  test_enricher.py  test_extractor.py  test_parser.py  test_run.py  test_sanitizer.py
