[project]
name = "ashoka-eats"
version = "0.1.0"
description = "WhatsApp group food recommendation aggregator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-settings>=2.7",
    "rapidfuzz>=3.14.3",
]

[dependency-groups]
dev = [
    "mypy>=1.14",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
